--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "npm": "9.x"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test:backend": "jest --config jest.backend.config.js",
     "start": "node server.js",
     "server": "nodemon server.js",
     "client": "npm start --prefix app/client",
@@ -29,7 +29,24 @@
     "uuid": "^10.0.0"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.24.7",
+    "@testing-library/jest-dom": "^6.4.6",
+    "@testing-library/react": "^16.0.0",
     "concurrently": "^8.2.2",
-    "nodemon": "^3.1.4"
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.4",
+    "supertest": "^7.0.0"
+  },
+  "jest": {
+    "setupFilesAfterEnv": [
+      "@testing-library/jest-dom"
+    ],
+    "testEnvironment": "node",
+    "transform": {
+      "^.+\\.jsx?$": "babel-jest"
+    },
+    "moduleNameMapper": {
+      "\\.(css|less)$": "identity-obj-proxy"
+    }
   }
 }
